--- a/.htaccess
+++ b/.htaccess
@@ -20,5 +20,5 @@ Header append Cache-Control "public"
 Header unset ETag
 FileETag None
 </FilesMatch>
-RewriteRule ^(.*)$ /grove/index.php?url=$1 [QSA,L]
+RewriteRule ^(.*)$ /index.php?url=$1 [QSA,L]
 #AddType application/x-httpd-php .html
